style.css
:root {
	--purple-50: #FAF5FF;
	--purple-100: #F3E8FF;
	--purple-200: #E9D5FF;
	--purple-300: #D8B4FE;
	--purple-400: #C084FC;
	--purple-500: #A855F7;
	--purple-600: #9333EA;
	--purple-700: #7E22CE;
	--purple-800: #6B21A8;
	--purple-900: #581C87;
	--light: var(--purple-50);
	--dark: #1E1E1E;
	--outline: rgba(89, 28, 135, 0.2);

	--dark-purple-200: #B376E3;
	--dark-bg-50: #1B1D1E;
}

html {
	background-color: var(--purple-50);
	background-image: url("./src/waves.svg");
}

.error {
	display: flex;
	align-items: center;
	justify-content: center;

	background-color: var(--purple-50);
	background-image: url("./src/noise.svg");
	font-size: 128px;
}

.div-error {
	display: flex;
	align-items: center;
	justify-content: center;
}

body {
	display: flex;
	flex-direction: column;

	background-repeat: repeat;

	margin: 3em 7em;
	gap: 2em;
}

.hero {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	height: 100%;
}

.card-holder {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	gap: 20px;

	border-radius: 6px;
	border: solid 2px var(--outline);
	background-color: var(--purple-50);

	padding: 20px;
}

.card {
	display: flex;
	flex-direction: column;
	flex-grow: 1;

	gap: 15px;
}

.card-title {
	margin: 0;
	font-weight: 900;
	color: var(--purple-600);
}

.card-content {
	color: var(--purple-900);
}

.select-holder {
	display: flex;
	flex-direction: row;
	gap: 20px;
}

.card-select {
	color: var(--purple-900);

	display: flex;
	flex-direction: column;
	gap: 10px;
	padding: 20px;
	border-radius: 6px;
	border: 2px solid var(--outline);

	background-color: var(--purple-50);

	transition: all .2s ease;
}

.card-select:hover {
	background-color: var(--purple-900);
	color: var(--purple-50);
}

.additional-info {
	font-weight: 100;
	font-size: 14px;
	margin: 0;
}

.item-title {
	font-weight: 900;
	margin: 0;
	transition: background 0.2 ease;

}

.item {
	display: flex;
	flex-direction: column;
	gap: 5px;
}


a.link:visited {
	text-decoration: none;
}

a.link:hover {
	text-decoration: none;
	transition: background-color .1s ease;

	background-color: var(--purple-600);
	color: var(--purple-50);
	padding: 2px;
	border-radius: 4px;
}

a.link:active {
	text-decoration: none;
}

a.link {
	transition: background-color .1s ease;
}

.item-text {
	font-weight: 300;
	margin: 0;
	font-style: italic;
}

.card-text {
	font-weight: 300;
	margin: 0;
	font-size: 15px;
}

.highlight {
	padding: 15px;
	border-radius: 6px;
	background-color: var(--purple-200);
	border: solid 2px var(--purple-600);
	color: var(--purple-600);
}

.highlight * {
	color: var(--purple-600);
}

.card-content {
	display: flex;
	flex-direction: column;
	gap: 10px;
	padding: 20px;
	border-radius: 6px;
	border: 2px solid var(--outline);

	background-color: var(--purple-50);
}

.hero-content {
	display: flex;
	align-items: flex-start;
	justify-content: center;
	flex-direction: column;
}

.emoji {
	height: 64px;
	position: relative;
	opacity: 0;

	transition: opacity .4s ease;

	-webkit-user-drag: none;
}

.text {
	color: var(--purple-900);
	font-weight: normal;
	font-size: 40px;
}

.div-picture {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
}

.picture {
	width: 280px;
	border-radius: 170px;
	border: solid 10px var(--purple-200);
}

.action {
	font-weight: 700;
	font-size: 18px;
	background-color: var(--purple-200);
	color: var(--purple-600);
	border: 0;
	border-radius: 2rem;
	padding: 15px 25px;
	display: flex;
	align-items: center;
	gap: 10px;
	flex-wrap: nowrap;

	transition: box-shadow .4s ease;

	/* Safari */
	-webkit-user-select: none;

	/* Firefox */
	-moz-user-select: none;

	/* IE10+/Edge */
	-ms-user-select: none;

	/* Standard */
	user-select: none;
}

.action:hover {
	background-color: var(--purple-300);
	color: var(--purple-700);
	transition-property: box-shadow, background-color, font-weight;
	transition: .4s ease;

	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
}

.action:active {
	background-color: var(--purple-400);
	color: var(--purple-800);

	transition: background-color .2s ease;
}

/* Scrollbar */
/* Largura da Scrollbar */
::-webkit-scrollbar {
	width: 10px;
}

/* Fundo da Scrollbar */
::-webkit-scrollbar-track {
	background: var(--purple-100);
}

/* Puxador da Scrollbar */
::-webkit-scrollbar-thumb {
	background: var(--purple-300);
	border-radius: 50px;
}

/* Hover do Puxador da Scrollbar */
::-webkit-scrollbar-thumb:hover {
	background: var(--purple-400);
}


/* Mudar a cor da Seleção de Texto */
::selection {
	color: var(--purple-50);
	background: var(--purple-900);
}

/* Mudar a cor da Seleção de Texto */
::-moz-selection {
	/* Para Firefox */
	color: var(--purple-50);
	background: var(--purple-900);
}

.emoji:hover {
	/* Start the shake animation and make the animation last for 0.8 seconds */
	animation: shake 0.8s;

	/* When the animation is finished, start again */
	animation-iteration-count: infinite;
}

@keyframes shake {
	0% {
		transform: translate(1px, 1px) rotate(0deg);
	}

	10% {
		transform: translate(-1px, -2px) rotate(-1deg);
	}

	20% {
		transform: translate(-3px, 0px) rotate(1deg);
	}

	30% {
		transform: translate(3px, 2px) rotate(0deg);
	}

	40% {
		transform: translate(1px, -1px) rotate(1deg);
	}

	50% {
		transform: translate(-1px, 2px) rotate(-1deg);
	}

	60% {
		transform: translate(-3px, 1px) rotate(0deg);
	}

	70% {
		transform: translate(3px, 1px) rotate(-1deg);
	}

	80% {
		transform: translate(-1px, -1px) rotate(1deg);
	}

	90% {
		transform: translate(1px, 2px) rotate(0deg);
	}

	100% {
		transform: translate(1px, -2px) rotate(-1deg);
	}
}

.cursor {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: nowrap;

	position: fixed;
	width: 20px;
	height: 20px;
	border-radius: 50%;
	background-color: var(--purple-900);
	transition: all 0.05s;
	pointer-events: none;

	opacity: 0.8;
	z-index: 1;
}

.cursor_error {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: nowrap;

	position: fixed;
	width: 20px;
	height: 20px;
	background-color: var(--purple-900);
	transition: all 0.05s;
	pointer-events: none;
	transform: rotate(45deg);

	opacity: 0.8;
	z-index: 1;
}

* {
	font-family: 'Plus Jakarta Sans';
	cursor: none;
}

@media screen and (max-width: 600px) {
	.cursor {
		visibility: hidden;
	}
}

@media screen and (max-width:912px) {
	.cursor {
		visibility: hidden;
	}

	* {
		cursor: default;
	}

	body {
		margin: 2em;
	}
}

@media screen and (min-width: 1921px) {
	* {
		cursor: default;
	}

	.cursor {
		visibility: hidden;
	}

	.action:hover {
		cursor: pointer;
	}

	a.link:hover {
		cursor: pointer;
	}
}

